--- a/index.html
+++ b/index.html
@@ -224,56 +224,54 @@
 
     <footer class="footer">
         <div class="footer__column">
-            <ul class="footer__social-media-container">
-
-                <li class="footer__social-media-item">
-                    <a href="#" class="footer__social-media-link">
-                        <!-- ICON FACEBOOK-->
-                        <i class="fa-brands fa-facebook"></i>
+            <ul class="footer__contact-container">
+                <li class="footer__contact-item"> 
+                    <a href="#" class="footer__contact-link">
+                        <i class="fa-brands fa-facebook footer__contact-icon--facebook"></i>
+                        Facebook
                     </a>
                 </li>
-                <li class="footer__social-media-item">
-                    <a href="#" class="footer__social-media-link">
-                        <!-- ICON INSTAGRAM-->
-                        <i class="fa-brands fa-instagram"></i>
+                <li class="footer__contact-item">
+                    <a href="#" class="footer__contact-link">
+                        <i class="fa-brands fa-instagram footer__contact-icon--instagram"></i>
+                        Instagram
                     </a>
                 </li>
-                <li class="footer__social-media-item">
-                    <a href="#" class="footer__social-media-link">
-                        <!-- ICON LINKEDIN-->
-                        <i class="fa-brands fa-linkedin"></i>
+                <li class="footer__contact-item">
+                    <a href="#" class="footer__contact-link">
+                        <i class="fa-brands fa-linkedin footer__contact-icon--linkedin"></i>
+                        LinkedIn
                     </a>
                 </li>
             </ul>
         </div>
         <div class="footer__column">
-            <img src="#" alt="Company Logo" class="footer__logo">
-            <h1 class="footer_company-name">
-                    Nombre de la Empresa
-            </h1>
+            <img src="/assets/logo.png" alt="Company Logo" class="footer__logo" width="150">
+            <h2 class="footer__company-name">
+                NOMBRE DE LA EMPRESA
+            </h2>
             <p class="footer__copyrigth">
-                Todos los derechos reservados
+                Todos los derechos reservados a Pepito
             </p>
         </div>
         <div class="footer__column">
             <ul class="footer__contact-container">
-
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
-                        <!-- ICON -->
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-solid fa-square-phone-flip footer__contact-icon"></i>
+                        Telefono
                     </a>
                 </li>
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
-                        <!-- ICON -->
-                        <i class="fa-sharp fa-solid fa-location-dot"></i>
+                        <i class="fa-solid fa-location-dot footer__contact-icon"></i>
+                        Localizacion
                     </a>
                 </li>
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
-                        <!-- ICON -->
-                        <i class="fa-solid fa-message-text"></i>
+                        <i class="fa-solid fa-envelope footer__contact-icon"></i>
+                        Email
                     </a>
                 </li>
             </ul>
