--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <div class="section-cards__products-search-container">
                     
                     <div class="product-search">
-                        <label for="" class="product-search__label">Buscar</label>
-                        <input type="text" class="product-search__input">
-                        <button class="product-search__btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                        <animacion class="product-search__icon"><i class="fa-solid fa-magnifying-glass"></i></animacion>
+                        <input placeholder="Que deseas comprar hoy ?" type="text" class="product-search__input">
+                        <button class="product-search__btn">Buscar</button>
                     </div>
 
                     <div class="section-cards__products-count">
