search bar OK, falta animaciones

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="section-cards__products-count">
-                        Se encontraron X productos
+                        Se encontraron 12 productos
                     </div>
                 </div>
             </header>
