cards css, to solve:whish error...

--- a/index.html
+++ b/index.html
@@ -87,66 +87,11 @@
             <div class="cards-container">
                 <article class="card">
                     <div class="card__header">
-                        <img src="#" alt="Product Image" class="card__img">
-                    </div>
-                    <div class="card__body">
-                        <div class="card__title">
-                            PRODUCT NAME
+                        
+                        <div class="card__heart whish-list-on">
+                            <i class="fa-solid fa-heart"></i>
                         </div>
-                        <p class="card__description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione iusto repellendus laudantium expedita nesciunt dolores. Culpa consequuntur doloribus ab aperiam?
-                        </p>
-                        <div class="card__price">
-                            $ XXXXX
-                        </div>
-                    </div>
-                    <div class="card__footer">
-                        <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                Agregar
-                            </a>
-                        </div>
-                        <div class="card__btn-container">
-                            <a class="card__btn" href="#">
-                                <i class="fa-solid fa-circle-info"></i>
-                                Detalle
-                            </a>
-                        </div>
-                    </div>
-                </article>                    <article class="card">
-                    <div class="card__header">
-                        <img src="#" alt="Product Image" class="card__img">
-                    </div>
-                    <div class="card__body">
-                        <div class="card__title">
-                            PRODUCT NAME
-                        </div>
-                        <p class="card__description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione iusto repellendus laudantium expedita nesciunt dolores. Culpa consequuntur doloribus ab aperiam?
-                        </p>
-                        <div class="card__price">
-                            $ XXXXX
-                        </div>
-                    </div>
-                    <div class="card__footer">
-                        <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                Agregar
-                            </a>
-                        </div>
-                        <div class="card__btn-container">
-                            <a class="card__btn" href="#">
-                                <i class="fa-solid fa-circle-info"></i>
-                                Detalle
-                            </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="card">
-                    <div class="card__header">
-                        <img src="#" alt="Product Image" class="card__img">
+                        <img src="https://static.vecteezy.com/system/resources/previews/007/710/514/non_2x/green-sneakers-or-sport-running-shoe-isolated-on-a-white-background-free-photo.jpg" alt="Product Image" class="card__img">
                     </div>
                     <div class="card__body">
                         <div class="card__title">
@@ -176,7 +121,10 @@
                 </article>
                 <article class="card">
                     <div class="card__header">
-                        <img src="#" alt="Product Image" class="card__img">
+                        <div class="card__heart whish-list-off">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <img src="https://static.vecteezy.com/system/resources/previews/007/710/514/non_2x/green-sneakers-or-sport-running-shoe-isolated-on-a-white-background-free-photo.jpg" alt="Product Image" class="card__img">
                     </div>
                     <div class="card__body">
                         <div class="card__title">
@@ -206,7 +154,76 @@
                 </article>
                 <article class="card">
                     <div class="card__header">
-                        <img src="#" alt="Product Image" class="card__img">
+                        <div class="card__heart whish-list-off">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <img src="https://static.vecteezy.com/system/resources/previews/007/710/514/non_2x/green-sneakers-or-sport-running-shoe-isolated-on-a-white-background-free-photo.jpg" alt="Product Image" class="card__img">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__title">
+                            PRODUCT NAME
+                        </div>
+                        <p class="card__description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione iusto repellendus laudantium expedita nesciunt dolores. Culpa consequuntur doloribus ab aperiam?
+                        </p>
+                        <div class="card__price">
+                            $ XXXXX
+                        </div>
+                    </div>
+                    <div class="card__footer">
+                        <div class="card__btn-container">
+                            <a class="card__btn-cart" href="#">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                Agregar
+                            </a>
+                        </div>
+                        <div class="card__btn-container">
+                            <a class="card__btn" href="#">
+                                <i class="fa-solid fa-circle-info"></i>
+                                Detalle
+                            </a>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card__header">
+                        <div class="card__heart whish-list-off">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <img src="https://static.vecteezy.com/system/resources/previews/007/710/514/non_2x/green-sneakers-or-sport-running-shoe-isolated-on-a-white-background-free-photo.jpg" alt="Product Image" class="card__img">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__title">
+                            PRODUCT NAME
+                        </div>
+                        <p class="card__description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione iusto repellendus laudantium expedita nesciunt dolores. Culpa consequuntur doloribus ab aperiam?
+                        </p>
+                        <div class="card__price">
+                            $ XXXXX
+                        </div>
+                    </div>
+                    <div class="card__footer">
+                        <div class="card__btn-container">
+                            <a class="card__btn-cart" href="#">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                Agregar
+                            </a>
+                        </div>
+                        <div class="card__btn-container">
+                            <a class="card__btn" href="#">
+                                <i class="fa-solid fa-circle-info"></i>
+                                Detalle
+                            </a>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card__header">
+                        <div class="card__heart whish-list-off">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <img src="https://static.vecteezy.com/system/resources/previews/007/710/514/non_2x/green-sneakers-or-sport-running-shoe-isolated-on-a-white-background-free-photo.jpg" alt="Product Image" class="card__img">
                     </div>
                     <div class="card__body">
                         <div class="card__title">
