--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -61,7 +61,7 @@
     <main class="main-contact">
 
         <div class="main-contact__map">
-            <h1 class="contact-h1">Vicitanos!</h1>
+            <h1 class="titulo-h1">Vicitanos!</h1>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d8040.450896753331!2d-64.54006906331583!3d-32.08025068519654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salquimia!5e0!3m2!1ses-419!2sar!4v1672866931106!5m2!1ses-419!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -70,7 +70,7 @@
         </div>
 
         <div class="main-contact__form">
-            <h1 class="contact-h1">Contactanos!</h1>
+            <h1 class="titulo-h1">Contactanos!</h1>
             <form class="contact-form">
                 <div class="field-container contact-form__item">
                     <label class="field-container__label" for="name">Nombre</label><br>
