--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -170,13 +170,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -214,13 +214,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -260,13 +260,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -305,13 +305,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -355,13 +355,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -402,13 +402,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -447,13 +447,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -497,13 +497,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -540,13 +540,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="#">
+                            <a class="card__btn" href="">
                                 Detalle
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="#">
+                            <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 Agregar
                             </a>
@@ -583,13 +583,13 @@
     </div>
     <div class="card__footer">
         <div class="card__btn-container">
-            <a class="card__btn" href="#">
+            <a class="card__btn" href="">
                 Detalle
                 <i class="fa-solid fa-circle-info"> </i>
             </a>
         </div>
         <div class="card__btn-container">
-            <a class="card__btn-cart" href="#">
+            <a class="card__btn-cart" href="">
                 <i class="fa-solid fa-cart-shopping"> </i>
                 Agregar
             </a>
@@ -626,13 +626,13 @@
     </div>
     <div class="card__footer">
         <div class="card__btn-container">
-            <a class="card__btn" href="#">
+            <a class="card__btn" href="">
                 Detalle
                 <i class="fa-solid fa-circle-info"> </i>
             </a>
         </div>
         <div class="card__btn-container">
-            <a class="card__btn-cart" href="#">
+            <a class="card__btn-cart" href="">
                 <i class="fa-solid fa-cart-shopping"> </i>
                 Agregar
             </a>
@@ -647,7 +647,7 @@
         </section>
     </main>
     <div class="whatsapp-container">
-        <a href="#" class="whatsapp-container__link">
+        <a href="" class="whatsapp-container__link">
             <img src="/assets/img/icons/whatsapp.png" alt="Whatsapp contact link" class="whatsapp-container__img">
         </a>
     </div>
@@ -662,7 +662,7 @@
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
                         <i class="fa-brands fa-facebook footer__contact-icon footer__contact-icon--facebook"></i>
-                        Facebook
+                        Ranson and Wilder
                     </a>
                 </li>
                 <li class="footer__contact-item">
@@ -670,7 +670,7 @@
                         <i class="fa-brands fa-instagram 
                         footer__contact-icon
                         footer__contact-icon--instagram"></i>
-                        Instagram
+                        Ranson_Wilder
                     </a>
                 </li>
                 <li class="footer__contact-item">
@@ -678,7 +678,7 @@
                         <i class="fa-brands fa-linkedin 
                         footer__contact-icon
                         footer__contact-icon--linkedin"></i>
-                        LinkedIn
+                        Ranson_Wilder
                     </a>
                 </li>
             </ul>
@@ -695,21 +695,21 @@
         <div class="footer__column">
             <ul class="footer__contact-container">
                 <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
+                    <a href="tel://+541115514452)" class="footer__contact-link">
                         <i class="fa-solid fa-square-phone-flip footer__contact-icon"></i>
-                        Telefono
+                        Telefono (+54-11-15514452)
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
+                    <a href="https://goo.gl/maps/CCm7u2cHw5U7m2fD7" class="footer__contact-link">
                         <i class="fa-solid fa-location-dot footer__contact-icon"></i>
-                        Localizacion
+                        Street 135 AV Wilder, Los Angeles
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
+                    <a href="mail:websell@ransomwilder.com" class="footer__contact-link">
                         <i class="fa-solid fa-envelope footer__contact-icon"></i>
-                        Email
+                        Email: websell@ransomwilder.com
                     </a>
                 </li>
             </ul>
