--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -375,7 +375,7 @@
                 <li class="footer__contact-item">
                     <a href="#" class="footer__contact-link">
                         <i class="fa-brands fa-facebook footer__contact-icon footer__contact-icon--facebook"></i>
-                        Facebook
+                        Ranson and Wilder
                     </a>
                 </li>
                 <li class="footer__contact-item">
@@ -383,7 +383,7 @@
                         <i class="fa-brands fa-instagram 
                         footer__contact-icon
                         footer__contact-icon--instagram"></i>
-                        Instagram
+                        Ranson_Wilder
                     </a>
                 </li>
                 <li class="footer__contact-item">
@@ -391,7 +391,7 @@
                         <i class="fa-brands fa-linkedin 
                         footer__contact-icon
                         footer__contact-icon--linkedin"></i>
-                        LinkedIn
+                        Ranson_Wilder
                     </a>
                 </li>
             </ul>
@@ -408,21 +408,21 @@
         <div class="footer__column">
             <ul class="footer__contact-container">
                 <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
+                    <a href="tel://+541115514452)" class="footer__contact-link">
                         <i class="fa-solid fa-square-phone-flip footer__contact-icon"></i>
-                        Telefono
+                        Telefono (+54-11-15514452)
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
+                    <a href="https://goo.gl/maps/CCm7u2cHw5U7m2fD7" class="footer__contact-link">
                         <i class="fa-solid fa-location-dot footer__contact-icon"></i>
-                        Localizacion
+                        Street 135 AV Wilder, Los Angeles
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
+                    <a href="mail:websell@ransomwilder.com" class="footer__contact-link">
                         <i class="fa-solid fa-envelope footer__contact-icon"></i>
-                        Email
+                        Email: websell@ransomwilder.com
                     </a>
                 </li>
             </ul>
