retoque y agregado de botones wts y up  en pag registro

--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -369,6 +369,17 @@
         </section>
     </main>
 
+    <div class="whatsapp-container">
+        <a href="" class="whatsapp-container__link">
+            <img src="/assets/img/icons/whatsapp.png" alt="Whatsapp contact link" class="whatsapp-container__img">
+        </a>
+    </div>
+    <div class="swipe-up">
+        <a href="#" class="swipe-up-container__link">
+            <img src="/assets/img/icons/swipe-up.png" alt="Subir Arriba" class="swipe-up__img">
+        </a>
+    </div>
+
     <footer class="footer">
         <div class="footer__column1">
             <ul class="footer__contact-container">
