retoques bug visual y link wts

--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
-                                Detalle
+                            <a class="card__btn" href=" ">
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -171,14 +171,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -215,14 +215,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -261,14 +261,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -306,14 +306,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -356,14 +356,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -403,14 +403,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -448,14 +448,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -498,14 +498,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -541,14 +541,14 @@
                     <div class="card__footer">
                         <div class="card__btn-container">
                             <a class="card__btn" href="">
-                                Detalle
+                                <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
                             <a class="card__btn-cart" href="">
                                 <i class="fa-solid fa-cart-shopping"> </i>
-                                Agregar
+                                <p class="card__btnTextCart">Agregar</p>
                             </a>
                         </div>
                     </div>
@@ -584,14 +584,14 @@
     <div class="card__footer">
         <div class="card__btn-container">
             <a class="card__btn" href="">
-                Detalle
+                <p class="card__btnTextDet">Detalle</p>
                 <i class="fa-solid fa-circle-info"> </i>
             </a>
         </div>
         <div class="card__btn-container">
             <a class="card__btn-cart" href="">
                 <i class="fa-solid fa-cart-shopping"> </i>
-                Agregar
+                <p class="card__btnTextCart">Agregar</p>
             </a>
         </div>
     </div>
@@ -627,14 +627,14 @@
     <div class="card__footer">
         <div class="card__btn-container">
             <a class="card__btn" href="">
-                Detalle
+                <p class="card__btnTextDet">Detalle</p>
                 <i class="fa-solid fa-circle-info"> </i>
             </a>
         </div>
         <div class="card__btn-container">
             <a class="card__btn-cart" href="">
                 <i class="fa-solid fa-cart-shopping"> </i>
-                Agregar
+                <p class="card__btnTextCart">Agregar</p>
             </a>
         </div>
     </div>
@@ -647,7 +647,7 @@
         </section>
     </main>
     <div class="whatsapp-container">
-        <a href="" class="whatsapp-container__link">
+        <a class="whatsapp-container__link" href="https://wa.me/543512531103?text=Hola%20Ranson%20and%20Wilder%20">
             <img src="/assets/img/icons/whatsapp.png" alt="Whatsapp contact link" class="whatsapp-container__img">
         </a>
     </div>
