--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -114,7 +114,7 @@
     </main>
 
     <div class="whatsapp-container">
-        <a href="" class="whatsapp-container__link">
+        <a href="https://wa.me/543512531103?text=Hola%20Ranson%20and%20Wilder%20" class="whatsapp-container__link">
             <img src="/assets/img/icons/whatsapp.png" alt="Whatsapp contact link" class="whatsapp-container__img">
         </a>
     </div>
