retoques bugs visuales

--- a/index.html
+++ b/index.html
@@ -125,13 +125,15 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href=" ">
+
+                            
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -170,13 +172,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -214,13 +216,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -260,13 +262,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -305,13 +307,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -355,13 +357,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -402,13 +404,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -447,13 +449,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -497,13 +499,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -540,13 +542,13 @@
                     </div>
                     <div class="card__footer">
                         <div class="card__btn-container">
-                            <a class="card__btn" href="">
+                            <a class="card__btn">
                                 <p class="card__btnTextDet">Detalle</p>
                                 <i class="fa-solid fa-circle-info"> </i>
                             </a>
                         </div>
                         <div class="card__btn-container">
-                            <a class="card__btn-cart" href="">
+                            <a class="card__btn-cart">
                                 <i class="fa-solid fa-cart-shopping"> </i>
                                 <p class="card__btnTextCart">Agregar</p>
                             </a>
@@ -583,13 +585,13 @@
     </div>
     <div class="card__footer">
         <div class="card__btn-container">
-            <a class="card__btn" href="">
+            <a class="card__btn">
                 <p class="card__btnTextDet">Detalle</p>
                 <i class="fa-solid fa-circle-info"> </i>
             </a>
         </div>
         <div class="card__btn-container">
-            <a class="card__btn-cart" href="">
+            <a class="card__btn-cart">
                 <i class="fa-solid fa-cart-shopping"> </i>
                 <p class="card__btnTextCart">Agregar</p>
             </a>
@@ -626,13 +628,13 @@
     </div>
     <div class="card__footer">
         <div class="card__btn-container">
-            <a class="card__btn" href="">
+            <a class="card__btn">
                 <p class="card__btnTextDet">Detalle</p>
                 <i class="fa-solid fa-circle-info"> </i>
             </a>
         </div>
         <div class="card__btn-container">
-            <a class="card__btn-cart" href="">
+            <a class="card__btn-cart">
                 <i class="fa-solid fa-cart-shopping"> </i>
                 <p class="card__btnTextCart">Agregar</p>
             </a>
